<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:layerType="hardware"
        android:orientation="vertical">

    <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_terminal"
            app:tint="?attr/colorPrimary" />

    <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="25dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/connected_device"
            android:textAlignment="center"
            style="@style/DialogTitleAppearance" />

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:elevation="0dp"
            app:strokeColor="?attr/colorPrimary"
            app:strokeWidth="1dp">

        <TextView
                android:id="@+id/device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_gravity="center_horizontal"
                style="@style/DialogDescriptionAppearance" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/switchMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/switch_mode"
            android:visibility="gone"
            app:icon="@drawable/rotate_reset"
            style="@style/Widget.Material3.Button.Icon" />

    <LinearLayout
            android:id="@+id/options_expanded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:visibility="gone">

        <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radio_button_1">

            <RadioButton
                    android:id="@+id/basic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.85"
                    android:text="@string/basic_shell" />

            <RadioButton
                    android:id="@+id/shizuku"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.85"
                    android:text="@string/shizuku" />

            <RadioButton
                    android:id="@+id/root"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.85"
                    android:text="@string/root" />

        </RadioGroup>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    style="?attr/materialButtonOutlinedStyle" />

            <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

            <Button
                    android:id="@+id/confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/confirm"
                    style="@style/Widget.Material3.Button.Icon" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
