<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="25dp"
        android:text="@string/update_available"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/latest_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="25dp"
        android:textAppearance="?attr/textAppearanceTitleSmall"
        android:textColor="?attr/colorPrimary" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/current_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="25dp"
        android:textAppearance="?attr/textAppearanceTitleSmall" />

    <FrameLayout
        android:id="@+id/progressBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/update_available_summary"
            style="@style/ItemDescription" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/download_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:layout_gravity="center"
            android:max="100"
            android:visibility="gone"
            app:trackThickness="3dp"
            app:waveSpeed="6dp"
            app:waveAmplitude="2dp"
            app:wavelength="22dp" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginHorizontal="25dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/cancel"
            style="?attr/materialButtonOutlinedStyle" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center">

            <Button
                android:id="@+id/download_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/download"
                android:textAppearance="?attr/textAppearanceBodyMedium" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/loading_animation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/download_button"
                android:layout_alignEnd="@id/download_button"
                android:layout_alignStart="@id/download_button"
                android:layout_alignTop="@id/download_button"
                android:layout_centerInParent="true"
                android:visibility="gone"
                app:lottie_autoPlay="true"
                app:lottie_colorFilter="?attr/colorOnPrimary"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/loading_dots" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
